:monocle_face: working on latest uruguayan data
Check sample names and write metadata file

--- a/notebooks/exploratory/0.20.0-bunop-uruguay_fg.ipynb
+++ b/notebooks/exploratory/0.20.0-bunop-uruguay_fg.ipynb
@@ -218,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af2e51cb385743489a8bff969907a2d5",
+       "model_id": "b5af8cd7064543d5a68e11c2b3f50ece",
        "version_major": 2,
        "version_minor": 0
       },
@@ -844,7 +844,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2a409cf18314ec6b8b96421d1fcf269",
+       "model_id": "4c3f50f9107c4d529a3c35c49084a3bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1116,7 +1116,7 @@
    "id": "ab3e1aca-23d4-414a-93cf-276eef6fc638",
    "metadata": {},
    "source": [
-    "Focus only on *inia apbril* data:"
+    "Focus only on *inia abril* data:"
    ]
   },
   {
@@ -1237,12 +1237,491 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ebf9b5dd-ebbb-4553-b28f-e5872f8a0a9f",
+   "metadata": {},
+   "source": [
+    "## Placas1_4_genotyping\n",
+    "Finally the last dataset:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9cf781f5-45f8-44df-bfcd-d04e1c0c45cd",
+   "execution_count": 22,
+   "id": "f2051eb7-a0c9-4d92-bbc0-fd13e6716c4c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "placas1_4 = Dataset.objects.get(file=\"Placas1_4_genotyping.zip\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33e45380-b4bc-4e08-9927-2cdb850d8372",
+   "metadata": {},
+   "source": [
+    "There's only one file in dataset, the file with the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "39ae639d-2f10-47f5-a66a-8192b7be541a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Skipping: ##batch-folder=Z:\\Carpetas Personales\\rfossati\\RESULTADOS GENOTIPADOS\\ovinos INIA\\Inia_agosto\\Placas1_2_3_4\\Placas1_2_3_4\n",
+      "Skipping: ##annotation-file=C:\\Users\\Public\\Documents\\AxiomAnalysisSuite\\Library\\Axiom_Ovi_Can_ovine_Analysis.r5\\Axiom_Ovi_Can.na35.r5.a6.annot.db\n",
+      "Skipping: ##export-txt-file=Z:\\Carpetas Personales\\rfossati\\RESULTADOS GENOTIPADOS\\ovinos INIA\\Inia_agosto\\Placas1_4_genotyping.txt\n",
+      "Skipping: ##snp-count=46359\n",
+      "Skipping: ##samples-per-snp=380\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = placas1_4.working_dir / placas1_4.contents[0]\n",
+    "probeset_ids = [record.probeset_id for record in read_affymetrixRow(path)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd66a075-12ef-4ace-bda3-00ea291d3b7a",
+   "metadata": {},
+   "source": [
+    "Check if those probeset ids are in database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1cbdaf35-c9df-450b-9db8-51d8ba2a09a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cdd45d3026c0479a80c38651670b49a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/46359 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing 1 SNPs of 46359\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing = 0\n",
+    "\n",
+    "for probeset_id in tqdm(probeset_ids, total=len(probeset_ids)):\n",
+    "    query = {\n",
+    "        \"probesets__match\": {\n",
+    "            'chip_name': placas1_4.chip_name,\n",
+    "            'probeset_id': probeset_id\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    if not VariantSheep.objects(**query):\n",
+    "        missing += 1\n",
+    "        \n",
+    "print(f\"Missing {missing} SNPs of {len(probeset_ids)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc99cf53-d89d-43a1-91e9-220e53ee0aea",
+   "metadata": {},
+   "source": [
+    "Ok, all SNPs except one are in database. How about sample names?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6ad3f283-5d8c-4a3d-a582-3a42779280ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Skipping: ##batch-folder=Z:\\Carpetas Personales\\rfossati\\RESULTADOS GENOTIPADOS\\ovinos INIA\\Inia_agosto\\Placas1_2_3_4\\Placas1_2_3_4\n",
+      "Skipping: ##annotation-file=C:\\Users\\Public\\Documents\\AxiomAnalysisSuite\\Library\\Axiom_Ovi_Can_ovine_Analysis.r5\\Axiom_Ovi_Can.na35.r5.a6.annot.db\n",
+      "Skipping: ##export-txt-file=Z:\\Carpetas Personales\\rfossati\\RESULTADOS GENOTIPADOS\\ovinos INIA\\Inia_agosto\\Placas1_4_genotyping.txt\n",
+      "Skipping: ##snp-count=46359\n",
+      "Skipping: ##samples-per-snp=380\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "380"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record = next(read_affymetrixRow(path))\n",
+    "record.n_samples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1913d91-6372-4865-a51a-0c73ac169dfc",
+   "metadata": {},
+   "source": [
+    "It seems that I have more samples than I have in metadata. Check in metadata info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e2fe5ec7-77ff-438b-8843-7c24e6c6f85e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got 41 samples\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N</th>\n",
+       "      <th>Lab_ID</th>\n",
+       "      <th>Breed</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Site</th>\n",
+       "      <th>File</th>\n",
+       "      <th>id_column</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20210824028</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20210824029</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20210824030</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>20210824031</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>20210824032</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   N       Lab_ID   Breed     Sex             Site                      File  \\\n",
+       "0  1  20210824028  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "1  2  20210824029  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "2  3  20210824030  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "3  4  20210824031  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "4  5  20210824032  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "\n",
+       "  id_column  \n",
+       "0      None  \n",
+       "1      None  \n",
+       "2      None  \n",
+       "3      None  \n",
+       "4      None  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "placas1_4_metadata = info[info[\"File\"] == placas1_4.contents[0]]\n",
+    "print(f\"Got {placas1_4_metadata.shape[0]} samples\")\n",
+    "placas1_4_metadata.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c26c0383-4df9-423d-bbad-a5654ff04f08",
+   "metadata": {},
+   "source": [
+    "Well, I have less *ids* than the samples I see in the datafile. Get *lab ids*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "905c31e8-8b55-43db-9386-803f9597c5df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lab_ids = [str(id_) for id_ in placas1_4_metadata[\"Lab_ID\"].tolist()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f03983f-3fc5-48c2-803d-687fc07526b5",
+   "metadata": {},
+   "source": [
+    "And even samples names are different. I need to match the *file id* with the *lab id*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2a38a91b-a372-4a24-a09e-40481a109e26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for lab_id in lab_ids:\n",
+    "    for col in record._fields:\n",
+    "        if lab_id in col:\n",
+    "            lab2file_ids[lab_id] = col"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc81c6f9-7e95-45f8-9a38-5819ec05fc79",
+   "metadata": {},
+   "source": [
+    "Next, I need to track this column in my datatable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "353590fb-69e4-4407-8c60-b43c260294f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info[\"id_column\"] = info[\"Lab_ID\"].apply(lambda lab_id: lab2file_ids[str(lab_id)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ef858e9-2cb3-4838-94a5-b717139a045f",
+   "metadata": {},
+   "source": [
+    "Focus only on *placas 1-4* data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a92d1c64-5221-4841-922d-efb960df3042",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N</th>\n",
+       "      <th>Lab_ID</th>\n",
+       "      <th>Breed</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Site</th>\n",
+       "      <th>File</th>\n",
+       "      <th>id_column</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20210824028</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>op258_20210824028_cel_call_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20210824029</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>op259_20210824029_cel_call_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20210824030</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>op260_20210824030_cel_call_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>20210824031</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>op261_20210824031_cel_call_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>20210824032</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>Placas1_4_genotyping.txt</td>\n",
+       "      <td>op262_20210824032_cel_call_code</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   N       Lab_ID   Breed     Sex             Site                      File  \\\n",
+       "0  1  20210824028  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "1  2  20210824029  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "2  3  20210824030  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "3  4  20210824031  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "4  5  20210824032  Creole  Female  INIA Las Brujas  Placas1_4_genotyping.txt   \n",
+       "\n",
+       "                         id_column  \n",
+       "0  op258_20210824028_cel_call_code  \n",
+       "1  op259_20210824029_cel_call_code  \n",
+       "2  op260_20210824030_cel_call_code  \n",
+       "3  op261_20210824031_cel_call_code  \n",
+       "4  op262_20210824032_cel_call_code  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "placas1_4_metadata = info[info[\"File\"] == placas1_4.contents[0]]\n",
+    "placas1_4_metadata.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c325a64-23de-4fc8-9b7d-46383c92be72",
+   "metadata": {},
+   "source": [
+    "## Updating metadata file\n",
+    "Time to save the updated metadata file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "51ec1578-7ecb-44d9-a5da-bac69967fb29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outfile = \"20220809_105_Creole_Samples_INIA_Uruguay_fix.xlsx\"\n",
+    "info.to_excel(outfile, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1247d659-30b8-4577-9105-47bb7ebfa843",
+   "metadata": {},
+   "source": [
+    "This fixed metadata file will be placed in the archive"
+   ]
   }
  ],
  "metadata": {
