:sparkles: create samples for latest Uruguay data

--- a/notebooks/exploratory/0.20.0-bunop-uruguay_fg.ipynb
+++ b/notebooks/exploratory/0.20.0-bunop-uruguay_fg.ipynb
@@ -218,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5af8cd7064543d5a68e11c2b3f50ece",
+       "model_id": "9e0439ccbf264d688349ef75ac29e55e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -774,7 +774,26 @@
    "id": "8f53d1bf-5cd9-4eee-804b-248517b169f4",
    "metadata": {},
    "source": [
-    "Ok, I need to track this new column in metadata file. Let's explore the other datasets, then write down the updated metadata file. I need also to define a new class in `src.features.plinkio` module to deal with this type of data files."
+    "Ok, I need to track this new column in metadata file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "42e0d663-219b-4ece-a756-b6358d8bb792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outfile = \"placa_junio_metadata.xlsx\"\n",
+    "placa_junio_metadata.to_excel(outfile, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc8e3094-b340-4296-b412-98f168fad641",
+   "metadata": {},
+   "source": [
+    "This fixed metadata file will be placed in the archive. Let's explore the other datasets. I need also to define a new class in `src.features.plinkio` module to deal with this type of data files."
    ]
   },
   {
@@ -788,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "438aa3b1-506c-41e3-be97-75c785f99730",
    "metadata": {},
    "outputs": [],
@@ -806,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8579ed11-22a4-48ff-a8ae-bba26bcad45e",
    "metadata": {},
    "outputs": [
@@ -837,14 +856,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "98d8a47d-4f54-46f2-adb8-e4bd8163c990",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c3f50f9107c4d529a3c35c49084a3bb",
+       "model_id": "735cc87bb0ec461fab963ab7f86aab58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -890,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "11687033-67ad-4cc5-a577-2f044565af71",
    "metadata": {},
    "outputs": [
@@ -911,7 +930,7 @@
        "96"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "7f762934-fb87-47e6-a86b-af5c98efad1a",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1062,7 @@
        "45      None  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "15996f31-b630-45a7-8c4d-62a598e3988d",
    "metadata": {},
    "outputs": [],
@@ -1082,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "1ae07916-19d0-4a96-a9fc-baaf5063b8af",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "a3509e5f-ae16-4332-a259-ff7286cd36f2",
    "metadata": {},
    "outputs": [],
@@ -1121,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "fe044f91-a84a-4947-91d6-955d047c7549",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1245,7 @@
        "45  op833_20220323005_cel_call_code  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,6 +1253,25 @@
    "source": [
     "inia_abril_metadata = info[info[\"File\"] == inia_abril.contents[0]]\n",
     "inia_abril_metadata.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "043b0bcb-82d9-475d-9c43-7f4f6b8c6dc0",
+   "metadata": {},
+   "source": [
+    "Ok, I need to track this new column in metadata file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "380cde8f-1389-4c8c-acaa-21264754d3a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outfile = \"inia_abril_metadata.xlsx\"\n",
+    "inia_abril_metadata.to_excel(outfile, index=False)"
    ]
   },
   {
@@ -1247,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "f2051eb7-a0c9-4d92-bbc0-fd13e6716c4c",
    "metadata": {},
    "outputs": [],
@@ -1265,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "39ae639d-2f10-47f5-a66a-8192b7be541a",
    "metadata": {},
    "outputs": [
@@ -1296,14 +1334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "1cbdaf35-c9df-450b-9db8-51d8ba2a09a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdd45d3026c0479a80c38651670b49a0",
+       "model_id": "11d17c104d9d4a908544bf7d0ddbb4f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1349,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "6ad3f283-5d8c-4a3d-a582-3a42779280ef",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1408,7 @@
        "380"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "e2fe5ec7-77ff-438b-8843-7c24e6c6f85e",
    "metadata": {},
    "outputs": [
@@ -1502,7 +1540,7 @@
        "4      None  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "905c31e8-8b55-43db-9386-803f9597c5df",
    "metadata": {},
    "outputs": [],
@@ -1541,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "2a38a91b-a372-4a24-a09e-40481a109e26",
    "metadata": {},
    "outputs": [],
@@ -1562,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "353590fb-69e4-4407-8c60-b43c260294f9",
    "metadata": {},
    "outputs": [],
@@ -1580,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "a92d1c64-5221-4841-922d-efb960df3042",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1723,7 @@
        "4  op262_20210824032_cel_call_code  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,22 +1735,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c325a64-23de-4fc8-9b7d-46383c92be72",
+   "id": "92c54acb-e543-40ad-b7b8-e86447531f9b",
    "metadata": {},
    "source": [
-    "## Updating metadata file\n",
-    "Time to save the updated metadata file:"
+    "Ok, I need to track this new column in metadata file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "51ec1578-7ecb-44d9-a5da-bac69967fb29",
+   "execution_count": 33,
+   "id": "3be9e5f4-84c4-44d2-acae-040f9f0800b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfile = \"20220809_105_Creole_Samples_INIA_Uruguay_fix.xlsx\"\n",
-    "info.to_excel(outfile, index=False)"
+    "outfile = \"placas1_4_metadata.xlsx\"\n",
+    "placas1_4_metadata.to_excel(outfile, index=False)"
    ]
   },
   {
