:monocle_face: analyzing isheep-50K data

--- a/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
+++ b/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
@@ -189,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can found 48137/48221 in my SMARTER-database\n"
+      "I can found 48221/48221 in my SMARTER-database\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
    "id": "87b913bc-b798-457e-bf9a-ee2fb554d99d",
    "metadata": {},
    "source": [
-    "Probably my database need to be updated for the missing SNPs, however it seems that I could add almost all snps with an *rs_id*. Next question is are those SNPs in forward coordinates? I need to ovverride my class methods:"
+    "Loading data from other dataset provide me all the SNPs I need. So, I could add almost all snps with an *rs_id*. Next question is are those SNPs in forward coordinates? I need to ovverride my class methods:"
    ]
   },
   {
@@ -265,7 +265,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d76885ac801144ecaced164abd92e32a",
+       "model_id": "8de9fb904c3e494ea1299f96f6485324",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +280,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Error for SNP 2911:rs160561607: G/G <> T/C\n"
+      "Error for SNP 2911: 'rs160561607': G/G <> T/C\n"
      ]
     },
     {
@@ -315,7 +315,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd7e30f9e5e54b4d9e87d957404d15b8",
+       "model_id": "8799637702b345149c32e90274164db5",
        "version_major": 2,
        "version_minor": 0
       },
