--- a/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
+++ b/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
@@ -265,7 +265,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8de9fb904c3e494ea1299f96f6485324",
+       "model_id": "f371087b0c9443089b86d8fc1c0b7ec3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -315,7 +315,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8799637702b345149c32e90274164db5",
+       "model_id": "e201b23786ef45c99f7d0a2e1a1b961b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -441,7 +441,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can found 604072/604151 in my SMARTER-database\n"
+      "I can found 604149/604151 in my SMARTER-database\n"
      ]
     }
    ],
@@ -488,7 +488,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d4cee28aa89424b94dcfd69badea472",
+       "model_id": "8cb76de9f3884881bcda101b8d8124a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -503,7 +503,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Error for SNP 1855:rs160263922: A/A <> T/G\n"
+      "Error for SNP 1855: 'rs160263922': A/A <> T/G\n"
      ]
     },
     {
@@ -538,7 +538,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd2e4762c9e644b0839e599c1caaa85b",
+       "model_id": "bddf944028474885a665c00103fb8e05",
        "version_major": 2,
        "version_minor": 0
       },
