:sparkles: add isheep 600K data

--- a/notebooks/exploratory/0.17.3-bunop-fix-isheep-fid.ipynb
+++ b/notebooks/exploratory/0.17.3-bunop-fix-isheep-fid.ipynb
@@ -134,9 +134,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "806ae2f1-752f-4f59-bba7-33cf36c2c496",
+   "metadata": {},
+   "source": [
+    "## 600K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "27d1c9c9-d8fe-4d55-8c6e-b2a8a9e77cd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refined_600K_file = isheep_data_path / \"isheep_600K_refined.xlsx\"\n",
+    "fam_file = isheep_data_path / \"600K-all/600K-all.fam\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "576ab17a-0f16-44a4-a612-6272305ca5d3",
+   "metadata": {},
+   "source": [
+    "Read the refined file with codes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "72a2ac4b-f681-4ae5-a391-de4fec8a3127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refined_600K = pd.read_excel(refined_600K_file, sheet_name=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d736bed-732e-42ad-b356-8b92886d7612",
+   "metadata": {},
+   "source": [
+    "Now open the fam file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0e52cc1d-6bc1-4e0f-96f1-55b45ed94bbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(fam_file) as handle:\n",
+    "    data = handle.readlines()\n",
+    "    data = [line.strip().split() for line in data]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d447bd0-2f8d-4af3-81da-c9e4deaa834c",
+   "metadata": {},
+   "source": [
+    "Write an helper function to get the proper *FID* from refined file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ea85c1fe-7e79-40a6-9add-34b22ed5c8f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_code(sample_id):\n",
+    "    return refined_600K[refined_600K[\"alias\"] == sample_id]['code'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3baf5d1-8552-44f8-bc4f-edf6c916f922",
+   "metadata": {},
+   "source": [
+    "replace *FID* with the proper code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b42c70d3-0846-414d-a05a-f73e04d33e09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for line in data:\n",
+    "    # writing over list reference\n",
+    "    line[0] = get_code(line[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87ea4da0-6ee7-4217-bb8e-4ef372f8337a",
+   "metadata": {},
+   "source": [
+    "Write down the corrected file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c31c535f-509e-4ecc-a80d-25ed069a1a4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(isheep_data_path / \"600K-all/600K-all-fixed.fam\", \"w\") as handle:\n",
+    "    writer = csv.writer(handle, delimiter=\" \", lineterminator=\"\\n\")\n",
+    "    writer.writerows(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f089f11-62bf-4aaa-975d-3bc210969bc2",
+   "metadata": {},
+   "source": [
+    "This fixed file need to replace the original `.fam` file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f05c3a93-5be4-4e1d-b307-f65540753967",
+   "id": "92060227-f210-4cd9-8aa1-ebb77eb6b3bc",
    "metadata": {},
    "outputs": [],
    "source": []
